force-app/main/default/objects/OrderLine__c/OrderLine__c.object-meta.xml
<CustomObject>
    <label>Order Line</label>
    <nameField>
        <label>Order Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>