force-app/main/default/objects/OrderLine__c/fields/Initial_Eta_Max__c.field-meta.xml
<CustomField>
    <fullName>Initial_Eta_Max__c</fullName>
    <label>Initial_Eta_Max</label>
    <type>Date</type>
</CustomField>