force-app/main/default/objects/OrderLine__c/fields/OrderShipping__c.field-meta.xml
<CustomField>
    <fullName>OrderShipping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Shipping</label>
    <referenceTo>OrderShipping__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>