force-app/main/default/objects/OrderLine__c/fields/ProductReferential__c.field-meta.xml
<CustomField>
    <fullName>ProductReferential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product referential has more SKU than Product Catalogue</description>
    <label>Product Referential</label>
    <referenceTo>ProductReferential__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>