force-app/main/default/objects/OrderLine__c/fields/Revised_Eta_Max__c.field-meta.xml
<CustomField>
    <fullName>Revised_Eta_Max__c</fullName>
    <label>Revised Eta Max</label>
    <type>Date</type>
</CustomField>