force-app/main/default/objects/OrderLine__c/fields/Revised_Eta_Min__c.field-meta.xml
<CustomField>
    <fullName>Revised_Eta_Min__c</fullName>
    <label>Revised Eta Min</label>
    <type>Date</type>
</CustomField>