force-app/main/default/objects/OrderLine__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>The field is used if the SKU is unknown in the Product Referential table</description>
    <label>SKU</label>
    <length>25</length>
    <type>Text</type>
</CustomField>